forked from openenergy and changed docker image to 13